# lms-api

./: .gitignore  README.md  main.py  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt
chapter/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/: permissions.py  views.py
coupon/: models.py  serializers.py  urls.py  views.py
course/: admin.py  models.py  serializers.py  urls.py  views.py
doubt/: apps.py
lms_api/: asgi.py  settings.py  urls.py  wsgi.py
