[project]
name = "lms-api"
version = "0.1.0"
description = "LMS API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1,<5.3",
    "django-filter>=25.1,<25.2",
    "djangorestframework>=3.16,<3.17",
    "pillow>=11.2.1,<11.3",
    "psycopg2>=2.9.10",
    "python-decouple>=3.8,<3.9",
    "shortuuid>=1.0.13",
]
